# clinical-rag-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_REPORT.md  FREE_TIER_DEPLOYMENT.md  FRONTEND_DESIGN_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_ARCHITECTURE.md  PROJECT.md  README.md  alembic.ini  docker-compose.prod.yml  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml  docker-deploy.yml
api/: index.py
app/: __init__.py  db.py  main.py  models.py  personalization.py
app/agents/: __init__.py  citation_validator.py  clinical_rag_agent.py
app/api/: dependencies.py  routes.py
app/auth/: models.py  routes.py  security.py
app/cases/: models.py  repository.py  synthetic_cases.py
app/chat/: models.py  repository.py  routes.py
app/core/: config.py  latency.py  logging.py  rate_limiter.py
app/db/: __init__.py  engine.py
app/evaluation/: langsmith_eval.py  metrics.py  run.py  run_langsmith.py
app/ingestion/: __init__.py  chunker.py  manifest.py  pdf_loader.py  source_registry.py  sources.py
app/llm/: __init__.py  providers.py  registry.py
app/okf/: __init__.py  interface.py  models.py  normalize.py  retriever.py  router.py
app/retrieval/: __init__.py  bm25.py  embeddings.py  pgvector_store.py  reranker.py  store.py
app/safety/: __init__.py  classifier.py
app/tools/: calculator.py  care_gap_checker.py  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
hypertension-okf/: INDEX.md
notebooks/: ragas_evaluation.ipynb
scripts/: validate_okf.py  verify_everything.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_calculator.py  test_care_gap_checker.py  test_cases.py  test_chat.py  test_chunker.py  test_contracts.py  test_evaluation.py  test_evaluation_thresholds.py  test_generation.py  test_langsmith_eval.py  test_manifest.py  test_observability.py  test_okf_interface.py  test_okf_retriever.py  test_okf_router.py  test_pdf_loader.py  test_retrieval.py  test_safety_classifier.py  test_source_registry.py  test_version_checker.py
(+85 files in other folders)
